Fix Game Overall Progress with new styling

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </nav>
         </div>
 
-        <div class="content">
+        <div class="content" ng-controller="myTableGameProgressController">
             <div class="row">
                 <div class="col-md-12">
                     <div class="card cardBlueGradient">
@@ -106,103 +106,97 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
 
-        <!-- ******************** SHARING COMMON CONTROLLERS ******************** -->
+                <div class="col-md-12">
+                    <div class="card cardSpacing">
+                        <!-- ******************** TRELLO GAME PROGRESS ******************** -->
 
-        <div ng-controller="myTableGameProgressController">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <div class="nav flex-column nav-pills">
+                                    <a class="nav-link active" href="#overallProgress" data-toggle="pill"> Overall Progress </a>
 
-            <!-- ******************** TRELLO GAME PROGRESS ******************** -->
-
-            <div class="container">
-                <div class="row">
-                    <div role="tabpanel">
-                        <div class="col-sm-3">
-                            <ul class="nav nav-pills nav-stacked">
-                                <li class="active"> <a href="#overallProgress" data-toggle="tab"> Overall Progress </a> </li>
-
-                                <li ng-repeat="aTrelloBoardList in trelloBoardLists">
-                                    <a href="#{{removeSpace(aTrelloBoardList.boardName)}}" data-toggle="tab"> {{aTrelloBoardList.boardName}} </a>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <div class="col-sm-9">
-                            <div class="tab-content">
-                                <div class="tab-pane active" id="overallProgress">
-                                    <h1> Overview Progress </h1>
-
-                                    <div class="row">
-                                        <div class="col-sm-4" ng-repeat="aBoardCardCount in boardCardCount">
-                                            <p> {{aBoardCardCount.boardName}} : <strong> {{aBoardCardCount.boardCardCount}} </strong></p>
-                                        </div>
-                                    </div>
-
-                                    <div class="canvasSize">
-                                        <canvas id="overallProgressChart"> </canvas> <!-- Creating the overall statistics in table game progress -->
-                                    </div>
+                                    <a class="nav-link" ng-repeat="aTrelloBoardList in trelloBoardLists" href="#{{removeSpace(aTrelloBoardList.boardName)}}" data-toggle="pill"> {{aTrelloBoardList.boardName}} </a>
                                 </div>
+                            </div>
 
-                                <div ng-repeat="aTrelloBoardList in trelloBoardLists" id="{{removeSpace(aTrelloBoardList.boardName)}}" class="tab-pane">
+                            <div class="col-sm-9">
+                                <div class="tab-content">
+                                    <div class="tab-pane fade show active" id="overallProgress">
+                                        <h1> Overview Progress </h1>
 
-                                    <h1> {{aTrelloBoardList.boardName}} </h1>
-
-                                    <form>
-                                        <div class="form-group input-group">
-                                            <div class="input-group-addon"><i class="glyphicon glyphicon-search"></i></div>
-                                            <input type="text" class="form-control input-lg" placeholder="Search for a Task Attribute" ng-model="searchTaskAttribute">
+                                        <div class="row">
+                                            <div class="col-sm-4" ng-repeat="aBoardCardCount in boardCardCount">
+                                                <p> {{aBoardCardCount.boardName}} : <strong> {{aBoardCardCount.boardCardCount}} </strong></p>
+                                            </div>
                                         </div>
-                                    </form>
 
-                                    <div ng-show="(trelloCards | trelloCardsFilter: aTrelloBoardList.boardName: searchTaskAttribute).length">
-                                        <table class="gameProgress headerTable">
+                                        <div class="canvasSize">
+                                            <canvas id="overallProgressChart"> </canvas> <!-- Creating the overall statistics in table game progress -->
+                                        </div>
+                                    </div>
+
+                                    <div class="tab-pane fade" ng-repeat="aTrelloBoardList in trelloBoardLists" id="{{removeSpace(aTrelloBoardList.boardName)}}">
+                                        <h1> {{aTrelloBoardList.boardName}} </h1>
+
+                                        <form>
+                                            <div class="form-group input-group">
+                                                <div class="input-group-addon"><i class="glyphicon glyphicon-search"></i></div>
+                                                <input type="text" class="form-control input-lg" placeholder="Search for a Task Attribute" ng-model="searchTaskAttribute">
+                                            </div>
+                                        </form>
+
+                                        <div ng-show="(trelloCards | trelloCardsFilter: aTrelloBoardList.boardName: searchTaskAttribute).length">
+                                            <table class="gameProgress headerTable">
+                                                <thead>
+                                                <tr>
+                                                    <th class="taskNameColumn">    Task Name   </th>
+                                                    <th class="taskRoleColumn">    Role        </th>
+                                                    <th class="taskTimeColumn">    Time        </th>
+                                                    <th class="taskProgressColumn">    Progress    </th>
+                                                </tr>
+                                                </thead>
+                                            </table>
+
+                                            <div class="gameProgressScrolling">
+                                                <table class="gameProgress">
+                                                    <tr ng-repeat="aTrelloCard in trelloCards | trelloCardsFilter: aTrelloBoardList.boardName: searchTaskAttribute">
+                                                        <td class="taskNameColumn">    {{aTrelloCard.cardName}}                    </td>
+                                                        <td class="taskRoleColumn">    {{aTrelloCard.cardJob}}                     </td>
+                                                        <td class="taskTimeColumn">    {{aTrelloCard.cardEstimation === "Estimation Unknown" ? "Estimation Unknown" : aTrelloCard.cardEstimation + " days"}}   </td>
+                                                        <td class="taskProgressColumn">
+                                                            <div class="progress">
+                                                                <div class="progress-bar" role="progressbar"
+                                                                     style="width: {{aTrelloCard.cardListPercentage + '%'}};"
+                                                                     aria-valuenow="{{aTrelloCard.cardListPercentage}}"
+                                                                     aria-valuemin="0" aria-valuemax="100">
+
+                                                                    <span> {{aTrelloCard.cardListPercentage === 0 ? "0.00 %" : aTrelloCard.cardListPercentage + " %"}} </span>
+                                                                </div>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                </table>
+                                            </div>
+                                        </div>
+
+                                        <table class="gameProgress headerTableRound" ng-show="!(trelloCards | trelloCardsFilter: aTrelloBoardList.boardName: searchTaskAttribute).length">
                                             <thead>
-                                            <tr>
-                                                <th class="taskNameColumn">    Task Name   </th>
-                                                <th class="taskRoleColumn">    Role        </th>
-                                                <th class="taskTimeColumn">    Time        </th>
-                                                <th class="taskProgressColumn">    Progress    </th>
-                                            </tr>
+                                                <tr>    <th class="text-center">    The search that your are trying to perform does not match anything   </th>  </tr>
                                             </thead>
                                         </table>
-
-                                        <div class="gameProgressScrolling">
-                                            <table class="gameProgress">
-                                                <tr ng-repeat="aTrelloCard in trelloCards | trelloCardsFilter: aTrelloBoardList.boardName: searchTaskAttribute">
-                                                    <td class="taskNameColumn">    {{aTrelloCard.cardName}}                    </td>
-                                                    <td class="taskRoleColumn">    {{aTrelloCard.cardJob}}                     </td>
-                                                    <td class="taskTimeColumn">    {{aTrelloCard.cardEstimation === "Estimation Unknown" ? "Estimation Unknown" : aTrelloCard.cardEstimation + " days"}}   </td>
-                                                    <td class="taskProgressColumn">
-                                                        <div class="progress">
-                                                            <div class="progress-bar" role="progressbar"
-                                                                 style="width: {{aTrelloCard.cardListPercentage + '%'}};"
-                                                                 aria-valuenow="{{aTrelloCard.cardListPercentage}}"
-                                                                 aria-valuemin="0" aria-valuemax="100">
-
-                                                                <span> {{aTrelloCard.cardListPercentage === 0 ? "0.00 %" : aTrelloCard.cardListPercentage + " %"}} </span>
-                                                            </div>
-                                                        </div>
-                                                    </td>
-                                                </tr>
-                                            </table>
-                                        </div>
                                     </div>
-
-                                    <table class="gameProgress headerTableRound" ng-show="!(trelloCards | trelloCardsFilter: aTrelloBoardList.boardName: searchTaskAttribute).length">
-                                        <thead>
-                                        <tr>    <th class="text-center">    The search that your are trying to perform does not match anything   </th>  </tr>
-                                        </thead>
-                                    </table>
-
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="sectionTestingSpacing"> </div>
+        <!-- ******************** SHARING COMMON CONTROLLERS ******************** -->
+
+        <div ng-controller="myTableGameProgressController">
 
             <!-- ******************** DOWNLOADING LATEX DOCUMENTATION ******************** -->
 
