Update Sidebar Navigation Content

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="topNavigation">
             <div class="heading">
                 <div class="top-left">
-                    <a class="navbar-brand">    <h4> City Of The Zombies </h4>  </a>
+                    <a class="navbar-brand">    <h4> Dashboard System    </h4>  </a>
                     <a class="menuToggle">      <i class="fas fa-bars"></i>     </a>
                 </div>
 
@@ -51,27 +51,16 @@
                                 <a href="index.html">   <i class="fas fa-home"></i>     Home        </a>
                         </li>
 
-                        <li class="menu-title">    Game News            </li>
-                        <li>    <a href="#">    <i class="fas fa-home"></i>     News                </a>    </li>
-                        <li>    <a href="#">    <i class="fas fa-home"></i>     Media               </a>    </li>
-
-                        <li class="menu-title">    Game Information     </li>
-                        <li>    <a href="#">    <i class="fas fa-home"></i>     Getting Started     </a>    </li>
-                        <li>    <a href="#">    <i class="fas fa-home"></i>     Customisation       </a>    </li>
-                        <li>    <a href="#">    <i class="fas fa-home"></i>     Game Progress       </a>    </li>
-
-                        <li class="menu-title">    Communication     </li>
-                        <li>    <a href="#">    <i class="fas fa-home"></i>     Team                </a>    </li>
-                        <li>    <a href="#">    <i class="fas fa-home"></i>     Contact Us          </a>    </li>
-
-                        <li class="menu-title">    Development     </li>
+                        <li class="menu-title">    Drop Down Menu       </li>
                         <li class="menuDropDown">
                             <a href="#" class="menuDropDownTitle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fas fa-home"></i>   Components
+                                <i class="fas fa-home"></i>   Parent
                             </a>
 
                             <ul class="dropdown-menu">
-                                <li>    <a href="#">    <i class="fas fa-home"></i>     Buttons     </a>    </li>
+                                <li>    <a href="#">    <i class="fas fa-home"></i>     Child 1     </a>    </li>
+                                <li>    <a href="#">    <i class="fas fa-home"></i>     Child 2     </a>    </li>
+                                <li>    <a href="#">    <i class="fas fa-home"></i>     Child 3     </a>    </li>
                             </ul>
                         </li>
                     </ul>
