Fix build pipeline to build for production

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,10 @@
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
-    gtag('config', 'UA-149941240-1');
+    // Skip recording GA events to our account if in development.
+    if (document.location.hostname != 'localhost') {
+        gtag('config', 'UA-149941240-1');
+    }
   </script>
 </body>
 
