Fix import website configuration bug

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="author" content="Brandon Abela">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="Dashboard,System,Brandon,Abela,Trello">
   <meta name="google-site-verification" content="rN6vgEEws9dQ0H1ZMlXVooTdZludk_XpRpGFnBwBlKI" />
 
   <base href="/">
