Update project name

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
   <meta charset="utf-8">
   <meta name="author" content="Brandon Abela">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="Dashboard,System,Brandon,Abela,Trello">
+  <meta name="keywords" content="Brandon,Abela,TrelloDash,Trello,Dashboard">
 
   <base href="/">
-  <title> Dashboard System </title>
+  <title> TrelloDash </title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
